app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thbernar
  name: thbernar-service
  namespace: dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: thbernar
  type: NodePort
