app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thbernar-ingress
  namespace: dev
  labels:
    app: thbernar
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: thbernar-service
            port:
              number: 8888
